# pallas

./: .clang-format  CMakeLists.txt  flake.nix
apps/: CMakeLists.txt  pallas_info.cpp  pallas_sync.cpp
libraries/otf2/src/: OTF2_Archive.c  OTF2_EvtWriter.c  otf2_print.c
libraries/pallas/: CMakeLists.txt
libraries/pallas/include/pallas/: pallas.h
libraries/pallas/src/: pallas.cpp  pallas_read.cpp  pallas_storage.cpp  pallas_write.cpp
test/: test_hash.cpp
